Revision history for Module::Provision

0.27.1    2013-12-11 17:23:36
          - Dropped create_readme_md from share/Build.PL
            Closes RT#91320
          - Tweaked boilerplate in share/*.t
          - Simplified share/DZ_Build.PL
          - Use DZ::P::AbstractFromPOD
          - Use DZ::P::LicenseFromModule
          - Fixed fd3 usage in select_project

0.26.1    2013-11-25 21:28:18
          - Dropped DZ::P::MarkdownInRoot from dist.ini
          - Added select_project
          - Added ::Config::test_env_vars

0.25.1    2013-11-23 13:35:51
          - Dropped dependency on MooX::Options
          - Made ensure_class_loaded into a function

0.24.1    2013-09-16 21:22:24
          - Stopped re interpretaion of homedir in appldir builder

0.23.1    2013-09-14 10:37:11
          - Bumped Moo dependency closes RT#87575

0.22.1    2013-08-21 13:54:58
          - Bumped version to fix indexing

0.21.1    2013-08-21 13:25:21
          - Renamed Github repository to p5-module-provision

0.20.2    2013-08-19 14:59:28
          - Filter Dzil project file from prereq report
          - Fixed prereq report with Dzil
          - Bumped dependencies

0.19.5    2013-08-17 16:37:36
          - Switched to Dist::Zilla

0.18.4    2013-08-10 22:17:28
          - Updated share/dist.ini. Added share/DZ_Build.PL
          - Stopping testing on windows until RT#87575 is fixed
            febd397b-6bf5-1014-b508-69147d50f5d1
          - Toolchain update. Attempt to filter out residual noise
          - Misconfigured smoker 3c25f6a5-6c83-1014-9715-b1a9b77d427c
            c.f. df2446e9-6c38-1014-8bcf-004655012b15. Cannot see error
            because of RT#87575. Toolchain updated
          - Moved D::Z::P::ManifestInRoot to own dist

0.17.22   2013-08-03 20:22:50
          - Moved Moo::Role to after function imports
          - Another new method for CPANTesting min Perl ver
          - New method for CPANTesting min Perl ver