@@ -4,7 +4,7 @@ Module::Provision - Create Perl distributions with VCS and selectable toolchain
 
 # Version
 
-This documents version v0.26.$Rev: 2 $ of [Module::Provision](https://metacpan.org/pod/Module::Provision)
+This documents version v0.27.$Rev: 1 $ of [Module::Provision](https://metacpan.org/pod/Module::Provision)
 
 # Synopsis
 
