@@ -1,4 +1,4 @@
-; @(#)$Ident: dist.ini 2013-12-06 14:31 pjf ;
+; @(#)$Ident: dist.ini 2013-12-11 17:35 pjf ;
 
 name = Module-Provision
 
@@ -33,7 +33,6 @@ Module::Metadata      = 1.000011
 Moo                   = 1.003001
 Perl::Version         = 1.011
 Pod::Eventual         = 0.093330
-Pod::Markdown         = 1.500
 Template              = 2.22
 Type::Tiny            = 0.012
 
