@@ -1,5 +1,7 @@
 Revision history for Module::Provision
 
+          - Allow CPAN Reporter to smoke below min_perl_ver
+
 0.27.1    2013-12-11 17:23:36
           - Dropped create_readme_md from share/Build.PL
             Closes RT#91320
